# market-structure

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  binance_data.py  chart.py  data_cache.py  debug_signals.py  main.py  mock_data.py  ms_engine.py  pyproject.toml  tradfi_data.py  universe.py
tests/: TESTS.md  test_binance_data.py  test_determinism.py  test_main.py  test_ms_engine.py  test_repainting.py  test_tradfi_data.py  test_universe.py
