[project]
name = "market-structure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "ruff>=0.15.2",
    "mplfinance>=0.12.10b0",
    "fastparquet>=2025.12.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "lightweight-charts>=2.1",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "yfinance>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["I"]
